--- a/SistemaEscola/src/views/ProfessorJInternalFrame.form
+++ b/SistemaEscola/src/views/ProfessorJInternalFrame.form
@@ -505,7 +505,7 @@
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="/*"/>
-        <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="*/&#xa;jButton3.addActionLister();&#xa;jButton3.setActionCommand(&quot;salvar&quot;);"/>
+        <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="*/&#xa;//jButton3.addActionLister();&#xa;jButton3.setActionCommand(&quot;salvar&quot;);"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JToggleButton" name="jToggleButton1">
