--- a/SistemaEscola/src/views/CursoJInternalFrame.form
+++ b/SistemaEscola/src/views/CursoJInternalFrame.form
@@ -5,6 +5,11 @@
     <Component class="javax.swing.JScrollBar" name="jScrollBar1">
     </Component>
   </NonVisualComponents>
+  <Properties>
+    <Property name="closable" type="boolean" value="true"/>
+    <Property name="iconifiable" type="boolean" value="true"/>
+    <Property name="title" type="java.lang.String" value="Curso Adicionar Editar"/>
+  </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
   </SyntheticProperties>
@@ -236,6 +241,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/img/search_black.png"/>
             </Property>
+            <Property name="toolTipText" type="java.lang.String" value="Insira uma id e click neste bot&#xe3;o para pesquisar um curso pelo nome e poder edita-lo"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="searchNomeJButton.addActionListener(action);&#xa;searchNomeJButton.setActionCommand(&quot;pesquisarNome&quot;);"/>
@@ -246,6 +252,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/img/search_black.png"/>
             </Property>
+            <Property name="toolTipText" type="java.lang.String" value="Insira um professor e click neste bot&#xe3;o para pesquisar um curso por professor e poder edita-lo"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="searchProfessorJButton.addActionListener(action);&#xa;searchProfessorJButton.setActionCommand(&quot;pesquisarProfessor&quot;);"/>
@@ -307,6 +314,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/img/save_blue.png"/>
         </Property>
+        <Property name="toolTipText" type="java.lang.String" value="Click aqui para salvar as informa&#xe7;&#xf5;es do formul&#xe1;rio"/>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="salvarJButton.addActionListener(action);&#xa;salvarJButton.setActionCommand(&quot;salvar&quot;);"/>
@@ -317,6 +325,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/img/clear.png"/>
         </Property>
+        <Property name="toolTipText" type="java.lang.String" value="Click aqui para limpar todos os campos do cadastro"/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Cursor Padr&#xe3;o"/>
         </Property>
@@ -333,6 +342,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/img/cancelar.png"/>
         </Property>
+        <Property name="toolTipText" type="java.lang.String" value="Click aqui para fechar a Janela e cancelar as altera&#xe7;&#xf5;es"/>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="cancelarJButton.addActionListener(action);&#xa;cancelarJButton.setActionCommand(&quot;cancelar&quot;);"/>
@@ -350,6 +360,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/img/search_black.png"/>
         </Property>
+        <Property name="toolTipText" type="java.lang.String" value="Insira uma id e click neste bot&#xe3;o para pesquisar um curso pela id e poder edita-lo"/>
       </Properties>
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
